--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -4,7 +4,7 @@ applications:
   instances: 1
   memory: 256M
   routes:
-  - route: backlog-pal-manoj-cfapps.io
+  - route: backlog-pal-manoj.cfapps.io
   path: Applications/BacklogServer/bin/Release/netcoreapp2.1/publish
   env:
     REGISTRATION_SERVER_ENDPOINT: http://registration-pal-manoj.cfapps.io
