--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -6,7 +6,6 @@ applications:
   routes:
   - route: backlog-pal-manoj.cfapps.io
   path: Applications/BacklogServer/bin/Release/netcoreapp2.1/publish
-  env:
-    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-manoj.cfapps.io
   services:
   - tracker-backlog-database
+  - tracker-service-registry
