--- a/Applications/AllocationsServer/appsettings.json
+++ b/Applications/AllocationsServer/appsettings.json
@@ -16,6 +16,20 @@
           "serviceUrl": "http://localhost:8761/eureka/",
           "shouldRegisterWithEureka": false,
           "shouldFetchRegistry": true
-      }
+      },
+      "hystrix": {
+        "command": {
+            "default": {
+                "execution": {
+                    "isolation": {
+                        "thread": {
+                            "timeoutInMilliseconds": 5000
+                        }
+                    }
+                }
+            }
+        }
+    }
    }
+   
 }
