--- a/Applications/AllocationsServer/appsettings.json
+++ b/Applications/AllocationsServer/appsettings.json
@@ -10,13 +10,13 @@
             "ConnectionString": "Server=localhost;Database=tracker_allocations_dotnet_dev;Uid=tracker_dotnet;Pwd=password;"
         }
     },
-    "REGISTRATION_SERVER_ENDPOINT": "http://registration-service/",
     "eureka": {
       "client": {
           "serviceUrl": "http://localhost:8761/eureka/",
           "shouldRegisterWithEureka": false,
           "shouldFetchRegistry": true
-      },
+      }
+    },
       "hystrix": {
         "command": {
             "default": {
@@ -29,7 +29,16 @@
                 }
             }
         }
-    }
-   }
-   
+    },
+   "spring": {
+           "application": {
+               "name": "allocations-server"
+          },
+           "cloud": {
+              "config": {
+                   "failFast" : true,
+                   "uri": "http://localhost:8777"
+               }
+           }
+      }  
 }
